@@ -125,7 +125,11 @@ static inline void  sei(void)
 #   include <avr/pgmspace.h>
 #endif
 
-#define USB_READ_FLASH(addr)    pgm_read_byte(addr)
+#if USB_CFG_DRIVER_FLASH_PAGE
+#   define USB_READ_FLASH(addr)    pgm_read_byte_far(((long)USB_CFG_DRIVER_FLASH_PAGE << 16) | (long)(addr))
+#else
+#   define USB_READ_FLASH(addr)    pgm_read_byte(addr)
+#endif
 
 #define macro   .macro
 #define endm    .endm
